<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/windowBackground"
        tools:context=".account.presenter.fragments.StudentRegistrationFragment">


    <TextView
            android:id="@+id/enter_tv"
            android:textSize="@dimen/text_size_personal_account"
            android:text="@string/registration_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_login"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/buttons_start_and_end_margin"
            android:layout_marginStart="@dimen/buttons_start_and_end_margin"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_et"
                android:hint="@string/login_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_password"
            app:layout_constraintTop_toBottomOf="@+id/textlayout_login"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/buttons_start_and_end_margin"
            android:layout_marginStart="@dimen/buttons_start_and_end_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                android:inputType="textPassword"
                android:hint="@string/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
            android:id="@+id/checkbox_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="false"
            android:text="@string/teacher"
            app:layout_constraintStart_toStartOf="@+id/textlayout_password"
            app:layout_constraintTop_toBottomOf="@+id/textlayout_password" />

    <Button
            android:text="@string/student_registration_fragment_registration_button"
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shapeAppearance="?attr/roundedButton"
            android:layout_marginEnd="@dimen/buttons_start_and_end_margin"
            android:layout_marginStart="@dimen/buttons_start_and_end_margin"
            app:layout_constraintTop_toBottomOf="@+id/textlayout_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/sign_in_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.844"
            app:layout_constraintVertical_bias="0.288" />

    <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/enter_tv"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>