<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".account.presenter.fragments.AddTestFragment">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_test_name_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="@dimen/buttons_start_and_end_margin"
            android:layout_marginStart="@dimen/buttons_start_and_end_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_test_name_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/TestName"
                android:textAppearance="?attr/textAppearanceBody1"
                app:hintTextAppearance="?attr/textAppearanceBody1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_test_question_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/buttons_start_and_end_margin"
            android:layout_marginStart="@dimen/buttons_start_and_end_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textlayout_test_name_account"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_question_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question"
                style="?attr/textAppearanceBody1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/buttons_start_and_end_margin"
            android:layout_marginStart="@dimen/buttons_start_and_end_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textlayout_test_question_account"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_answer_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correct_answer"
                android:textAppearance="?attr/textAppearanceBody1"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_incorrect_answers_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/buttons_start_and_end_margin"
            android:layout_marginStart="@dimen/buttons_start_and_end_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textlayout_answer"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_incorrect_answers_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/incorrect_list"
                android:textAppearance="?attr/textAppearanceBody1"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
            android:id="@+id/button_add_test_account"
            android:text="@string/add_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSecondary"
            app:shapeAppearance="?attr/roundedButton"
            android:layout_marginEnd="@dimen/buttons_start_and_end_margin"
            android:layout_marginStart="@dimen/buttons_start_and_end_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textlayout_incorrect_answers_account"
            android:layout_marginTop="20dp"
            />

    <Button
            android:id="@+id/button_delete_test_account"
            android:text="@string/delete_tests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSecondary"
            app:shapeAppearance="?attr/roundedButton"
            android:layout_marginEnd="@dimen/buttons_start_and_end_margin"
            android:layout_marginStart="@dimen/buttons_start_and_end_margin"
            app:layout_constraintTop_toBottomOf="@id/textlayout_incorrect_answers_account"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            />

</androidx.constraintlayout.widget.ConstraintLayout>