<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/windowBackground"
        tools:context=".account.account.AccountFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_account_title"
            android:textAppearance="?attr/textAppearanceHeadline2"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?attr/colorSecondary"
            app:layout_constraintTop_toTopOf="@id/guideline3"
            app:layout_constraintBottom_toBottomOf="@id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/imageView" />


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group_19"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/text_view_account_email" />

    <TextView
            android:id="@+id/text_view_account_name"
            android:text="asd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MusicTheory.Subtitle1"
            android:textColor="?attr/windowBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="логин"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/text_view_account_email" />

    <TextView
            android:id="@+id/text_view_account_email"
            android:text="asd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MusicTheory.Subtitle1"
            android:textColor="?attr/windowBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="почта"
            app:layout_constraintTop_toBottomOf="@+id/text_view_account_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/imageView" />


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_test_name_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline4"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_test_name_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/TestName"
                android:textAppearance="?attr/textAppearanceBody1"
                app:hintTextAppearance="?attr/textAppearanceBody1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_test_question_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textlayout_test_name_account"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_question_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question"
                style="?attr/textAppearanceBody1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textlayout_test_question_account"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_answer_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correct_answer"
                android:textAppearance="?attr/textAppearanceBody1"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_incorrect_answers_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textlayout_answer"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_incorrect_answers_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/incorrect_list"
                android:textAppearance="?attr/textAppearanceBody1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/button_add_test_account"
            android:text="@string/add_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textlayout_incorrect_answers_account"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp" />

    <Button
            android:id="@+id/button_exit_account"
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="40dp" />

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.15"
            app:layout_constraintGuide_begin="115dp"
            android:id="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.30"
            android:id="@+id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.8"
            android:id="@+id/guideline5" />

    <Button
            android:text="Сменить тему"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_change_theme_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toTopOf="@+id/button_exit_account" />


</androidx.constraintlayout.widget.ConstraintLayout>